--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,10 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  color: orange;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
