--- a/app/ui/footer.module.css
+++ b/app/ui/footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   height: 60px;
   width: 100vw;
@@ -7,6 +7,7 @@
   grid-row-start: 3;
   display: flex;
   gap: 24px;
+  background-color: #212121;
 }
 
 .footer a {
